# zlens

.hooks/: commit-msg  pre-commit
api/: .flake8  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
api/.hooks/: commit-msg  pre-commit
api/alembic/: env.py
api/alembic/versions/: 02cf552a1854_add_endpoint_to_formulas_table.py  234c7c59f980_create_formulas_instances_routes_table.py  78b549d02ccf_add_served_at_to_formulas_table.py  cc4cdc2b2d11_create_instances_and_routes_table.py  d4dfbfae2e9d_create_formulas_instances_routes_table.py  f50947bd97b2_add_served_params_to_formulas_table.py
api/app/: config.py
api/app/api/: serv.py
api/app/api/routes/: formula.py
api/app/db/: connect.py  core.py
api/app/db/schemas/: __init__.py  formulas.py  instances.py  routes.py
api/app/utils/taskqueue/: tq.py  worker.py
api/app/utils/taskqueue/tasks/: formula.py  service.py
ui/: .lintstagedrc.js  .prettierignore  .prettierrc.js  package.json  pnpm-lock.yaml
ui/src/app/: RouteStoreContextProvider.tsx  layout.tsx  mfe-layout.tsx  page.tsx
ui/src/components/: AvailableFormulaList.tsx  DataSource.tsx  FormulaBar.tsx  FormulaBlock.tsx  FormulaHeader.tsx  FormulaInstanceTable.tsx  FormulaParamPanel.tsx  FormulaServiceTable.tsx  FormulaStack.tsx  Header.tsx  Icons.tsx  InstalledFormulaList.tsx  InstalledFormulaTable.tsx  LogViewer.tsx  MicroApp.tsx  Modal.tsx  NewRouteTable.tsx  ParamBlock.tsx  RouteFormulaInstanceTable.tsx  RouteTabBar.tsx  RouteTree.tsx  SideBar.tsx  Sidebar.tsx  ToolBar.tsx
ui/src/hooks/: useChildRoutes.ts  useCreateInstance.ts  useCreateRoute.ts  useCreateRouteAndSyncInstances.ts  useDeleteRoute.ts  useInstalledFormulas.ts  useInstances.ts  useKillService.ts  useRenameRoute.ts  useRoute.ts  useRouteTree.ts  useRoutesInstances.ts  useServeInstance.ts  useServices.ts  useStartService.ts  useSyncInstances.ts
(+11 files in other folders)
