[tool.poetry]
name = "zlens-api"
version = "0.1.0"
description = "APIs for zlens"
authors = ["Rui Zheng <rui@zityspace.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
databases = {extras = ["aiosqlite"], version = "^0.7.0"}
loguru = "^0.7.0"
python-multipart = "^0.0.6"
celery = {extras = ["gevent"], version = "^5.2.7"}
httpx = "^0.24.0"
zit = "^0.0.2"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.2.2"
commitizen = "^2.42.1"
alembic = "^1.10.4"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
(
  /(
      alembic
  )/
)
'''
preview = true

[tool.isort]
profile = "black"
skip = ["alembic"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "v$version"
